// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > content is positioned bottom 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_3_"
    data-state="delayed-open"
  >
    bottom tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
  >
    <div
      class="bg-base-200 text-base-content z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
      data-align="center"
      data-side="bottom"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      tooltip content bottom
      <span
        id="radix-_r_3_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        tooltip content bottom
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > content is positioned left 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_4_"
    data-state="delayed-open"
  >
    left tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 50%;"
  >
    <div
      class="bg-base-200 text-base-content z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
      data-align="center"
      data-side="left"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      tooltip content left
      <span
        id="radix-_r_4_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        tooltip content left
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > content is positioned right 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_2_"
    data-state="delayed-open"
  >
    right tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 50%;"
  >
    <div
      class="bg-base-200 text-base-content z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
      data-align="center"
      data-side="right"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      tooltip content right
      <span
        id="radix-_r_2_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        tooltip content right
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > content is positioned top 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_1_"
    data-state="delayed-open"
  >
    top tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
  >
    <div
      class="bg-base-200 text-base-content z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      tooltip content top
      <span
        id="radix-_r_1_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        tooltip content top
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has accent variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_7_"
    data-state="delayed-open"
  >
    accent tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-accent text-accent-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      accent tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-accent"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_7_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        accent tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has error variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_c_"
    data-state="delayed-open"
  >
    error tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-error text-error-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      error tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-error"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_c_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        error tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has info variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_9_"
    data-state="delayed-open"
  >
    info tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-info text-info-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      info tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-info"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_9_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        info tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has neutral variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_8_"
    data-state="delayed-open"
  >
    neutral tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-neutral text-neutral-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      neutral tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-neutral"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_8_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        neutral tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has primary variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_5_"
    data-state="delayed-open"
  >
    primary tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-primary text-primary-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      primary tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-primary"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_5_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        primary tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has secondary variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_6_"
    data-state="delayed-open"
  >
    secondary tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-secondary text-secondary-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      secondary tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-secondary"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_6_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        secondary tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has success variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_a_"
    data-state="delayed-open"
  >
    success tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-success text-success-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      success tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-success"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_a_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        success tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > has warning variant 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_b_"
    data-state="delayed-open"
  >
    warning tooltip
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 bg-warning text-warning-content"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      warning tooltip content
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
      >
        <svg
          class="fill-warning"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_b_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        warning tooltip content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > shows tooltip with content 1`] = `
<DocumentFragment>
  <button
    aria-describedby="radix-_r_0_"
    data-state="delayed-open"
  >
    Tooltip trigger
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
  >
    <div
      class="bg-base-200 text-base-content z-50 overflow-hidden rounded-md px-3 py-1.5 text-xs animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
      data-align="center"
      data-side="top"
      data-state="delayed-open"
      style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
    >
      I am the tooltip's content
      <span
        id="radix-_r_0_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        I am the tooltip's content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
